--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
       const [sortConfig, setSortConfig] = useState({ key: 'days', direction: 'desc' });
       const [closeModal, setCloseModal] = useState({ show: false, position: null, exitPrice: '', exitDate: new Date().toISOString().split('T')[0] });
       const [today] = useState(new Date().toISOString().split('T')[0]);
+      const [editingEntryDate, setEditingEntryDate] = useState(null);
       const [isRefreshing, setIsRefreshing] = useState(false);
       const [refreshProgress, setRefreshProgress] = useState({ current: 0, total: 0, ticker: '' });
       const [lastRefresh, setLastRefresh] = useState(null);
@@ -762,6 +763,14 @@
         saveData(newPos, closedTrades, transactions, priceCache, snapshots, settings);
       };
 
+      const updateEntryDate = (id, date) => {
+        if (!date) return;
+        const newPos = positions.map(p => p.id === id ? { ...p, entryDate: date } : p);
+        setPositions(newPos);
+        saveData(newPos, closedTrades, transactions, priceCache, snapshots, settings);
+        setEditingEntryDate(null);
+      };
+
       const closePosition = () => {
         const { position, exitPrice, exitDate } = closeModal;
         const trade = {
@@ -1107,7 +1116,21 @@
                                 className="bg-gray-700 rounded px-1 w-16 text-right"
                               />
                             </td>
-                            <td className="px-2 py-1.5 text-center text-gray-400">{fmtDate(p.entryDate)}</td>
+                            <td className="px-2 py-1.5 text-center text-gray-400 cursor-pointer" onClick={() => setEditingEntryDate(p.id)}>
+                              {editingEntryDate === p.id ? (
+                                <input
+                                  type="date"
+                                  defaultValue={p.entryDate}
+                                  autoFocus
+                                  onBlur={(e) => updateEntryDate(p.id, e.target.value)}
+                                  onKeyDown={(e) => { if (e.key === 'Enter') updateEntryDate(p.id, e.target.value); if (e.key === 'Escape') setEditingEntryDate(null); }}
+                                  className="bg-gray-700 rounded px-1 py-0.5 text-white text-xs w-28"
+                                  onClick={(e) => e.stopPropagation()}
+                                />
+                              ) : (
+                                <span className="hover:text-blue-400 hover:underline" title="Cliquer pour modifier">{fmtDate(p.entryDate)}</span>
+                              )}
+                            </td>
                             <td className="px-2 py-1.5 text-center">
                               <span className={`px-2 py-0.5 rounded font-bold ${p.days > 120 ? 'bg-red-600' : p.days > 60 ? 'bg-orange-600' : p.days > 30 ? 'bg-yellow-600 text-black' : 'bg-green-600'}`}>{p.days}j</span>
                             </td>
