--- a/index.html
+++ b/index.html
@@ -680,14 +680,36 @@
         return Math.max(0, Math.ceil((end.getTime() - start.getTime()) / (1000 * 60 * 60 * 24)));
       };
 
+      // HSBC HK trading fee calculator
+      const calcTradingFees = (amount, quantity, isBuy) => {
+        const brokerage = Math.max(amount * 0.0025, 100);
+        const boardLots = Math.ceil(quantity / 100); // assume 100 shares/lot
+        const depositCharge = isBuy ? Math.min(Math.max(boardLots * 5, 30), 200) : 0;
+        const stampDuty = Math.ceil(amount * 0.001);
+        const sfcLevy = amount * 0.000027;
+        const afrcLevy = amount * 0.0000015;
+        const hkexFee = amount * 0.0000565;
+        const settlementFee = Math.min(Math.max(amount * 0.00002, 2), 100);
+        return Math.round((brokerage + depositCharge + stampDuty + sfcLevy + afrcLevy + hkexFee + settlementFee) * 100) / 100;
+      };
+
       const getPositionsWithDays = () => positions.map(p => ({ ...p, days: calcDays(p.entryDate) }));
 
-      const getClosedTradesWithCalc = () => closedTrades.map(t => ({
-        ...t,
-        days: calcDays(t.entryDate, t.exitDate),
-        pnl: (t.exitPrice - t.entryPrice) * t.quantity,
-        pnlPercent: ((t.exitPrice - t.entryPrice) / t.entryPrice) * 100
-      }));
+      const getClosedTradesWithCalc = () => closedTrades.map(t => {
+        const grossPnl = (t.exitPrice - t.entryPrice) * t.quantity;
+        const fees = t.totalFees || 0;
+        const netPnl = grossPnl - fees;
+        return {
+          ...t,
+          days: calcDays(t.entryDate, t.exitDate),
+          grossPnl,
+          fees,
+          pnl: fees > 0 ? netPnl : grossPnl,
+          pnlPercent: fees > 0
+            ? (netPnl / (t.entryPrice * t.quantity + (t.buyFees || 0))) * 100
+            : ((t.exitPrice - t.entryPrice) / t.entryPrice) * 100
+        };
+      });
 
       const calculateMetrics = useMemo(() => {
         const posWithDays = getPositionsWithDays();
@@ -773,15 +795,23 @@
 
       const closePosition = () => {
         const { position, exitPrice, exitDate } = closeModal;
+        const qty = position.quantity;
+        const buyAmount = qty * position.entryPrice;
+        const sellAmount = qty * parseFloat(exitPrice);
+        const buyFees = calcTradingFees(buyAmount, qty, true);
+        const sellFees = calcTradingFees(sellAmount, qty, false);
         const trade = {
           id: Date.now(),
           ticker: position.ticker,
           name: position.name,
-          quantity: position.quantity,
+          quantity: qty,
           entryPrice: position.entryPrice,
           exitPrice: parseFloat(exitPrice),
           entryDate: position.entryDate,
-          exitDate: exitDate
+          exitDate: exitDate,
+          buyFees,
+          sellFees,
+          totalFees: Math.round((buyFees + sellFees) * 100) / 100
         };
         const newClosed = [trade, ...closedTrades];
         const newPos = positions.filter(p => p.id !== position.id);
@@ -1037,10 +1067,28 @@
                   <div className="space-y-3 text-sm">
                     <div><label className="text-gray-400 text-xs">Prix sortie</label><input type="number" step="0.01" value={closeModal.exitPrice} onChange={(e) => setCloseModal({ ...closeModal, exitPrice: e.target.value })} className="w-full bg-gray-700 rounded px-3 py-2" /></div>
                     <div><label className="text-gray-400 text-xs">Date sortie</label><input type="date" value={closeModal.exitDate} onChange={(e) => setCloseModal({ ...closeModal, exitDate: e.target.value })} className="w-full bg-gray-700 rounded px-3 py-2" /></div>
-                    <div className="bg-gray-700 rounded p-2 text-xs">
-                      <div className="flex justify-between"><span>Durée:</span><span className="font-bold text-purple-400">{calcDays(closeModal.position?.entryDate, closeModal.exitDate)} jours</span></div>
-                      <div className="flex justify-between"><span>P&L:</span><span className={parseFloat(closeModal.exitPrice) > closeModal.position?.entryPrice ? 'text-green-400' : 'text-red-400'}>{fmt((parseFloat(closeModal.exitPrice) - closeModal.position?.entryPrice) * closeModal.position?.quantity)} HKD ({(((parseFloat(closeModal.exitPrice) - closeModal.position?.entryPrice) / closeModal.position?.entryPrice) * 100).toFixed(1)}%)</span></div>
-                    </div>
+                    {(() => {
+                      const ep = parseFloat(closeModal.exitPrice) || 0;
+                      const pos = closeModal.position;
+                      const qty = pos?.quantity || 0;
+                      const buyAmt = qty * (pos?.entryPrice || 0);
+                      const sellAmt = qty * ep;
+                      const grossPnl = (ep - (pos?.entryPrice || 0)) * qty;
+                      const bFees = calcTradingFees(buyAmt, qty, true);
+                      const sFees = calcTradingFees(sellAmt, qty, false);
+                      const totalFees = Math.round((bFees + sFees) * 100) / 100;
+                      const netPnl = grossPnl - totalFees;
+                      const netPct = buyAmt > 0 ? (netPnl / (buyAmt + bFees)) * 100 : 0;
+                      return (
+                        <div className="bg-gray-700 rounded p-2 text-xs space-y-1">
+                          <div className="flex justify-between"><span>Durée:</span><span className="font-bold text-purple-400">{calcDays(pos?.entryDate, closeModal.exitDate)} jours</span></div>
+                          <div className="flex justify-between"><span>P&L brut:</span><span className={grossPnl >= 0 ? 'text-green-400' : 'text-red-400'}>{fmt(grossPnl)} HKD</span></div>
+                          <div className="flex justify-between text-gray-400"><span>Frais achat:</span><span>-{fmt(bFees)}</span></div>
+                          <div className="flex justify-between text-gray-400"><span>Frais vente:</span><span>-{fmt(sFees)}</span></div>
+                          <div className="border-t border-gray-600 pt-1 flex justify-between font-bold"><span>P&L net:</span><span className={netPnl >= 0 ? 'text-green-400' : 'text-red-400'}>{fmt(netPnl)} HKD ({netPct.toFixed(1)}%)</span></div>
+                        </div>
+                      );
+                    })()}
                     <div className="flex gap-2">
                       <button onClick={() => setCloseModal({ show: false, position: null, exitPrice: '', exitDate: '' })} className="flex-1 bg-gray-600 rounded py-2">Annuler</button>
                       <button onClick={closePosition} className="flex-1 bg-green-600 rounded py-2">Confirmer</button>
@@ -1347,7 +1395,10 @@
                           <td className="px-2 py-1.5 text-center text-gray-400">{fmtDate(t.entryDate)}</td>
                           <td className="px-2 py-1.5 text-center text-gray-400">{fmtDate(t.exitDate)}</td>
                           <td className="px-2 py-1.5 text-center"><span className={`px-2 py-0.5 rounded font-bold ${t.days > 30 ? 'bg-purple-600' : 'bg-blue-600'}`}>{t.days}j</span></td>
-                          <td className={`px-2 py-1.5 text-right font-semibold ${t.pnl >= 0 ? 'text-green-400' : 'text-red-400'}`}>{t.pnl >= 0 ? '+' : ''}{fmt(t.pnl)}</td>
+                          <td className={`px-2 py-1.5 text-right font-semibold ${t.pnl >= 0 ? 'text-green-400' : 'text-red-400'}`} title={t.fees > 0 ? `Brut: ${fmt(t.grossPnl)} | Frais: ${fmt(t.fees)}` : ''}>
+                            {t.pnl >= 0 ? '+' : ''}{fmt(t.pnl)}
+                            {t.fees > 0 && <span className="text-gray-500 text-[9px] ml-0.5">net</span>}
+                          </td>
                           <td className={`px-2 py-1.5 text-right font-bold ${t.pnlPercent >= 0 ? 'text-green-400' : 'text-red-400'}`}>{t.pnlPercent >= 0 ? '+' : ''}{t.pnlPercent.toFixed(1)}%</td>
                         </tr>
                       ))}
