--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
       }, [positions, closedTrades, transactions, priceCache, snapshots]);
 
       // ===== POSITION ACTIONS =====
-      const addPosition = () => {
+      const addPosition = async () => {
         if (!newPosition.ticker || !newPosition.quantity || !newPosition.entryPrice) return alert('Remplir Ticker, Qté et Prix');
         let ticker = newPosition.ticker.toUpperCase();
         // Ensure .HK suffix
@@ -777,6 +777,37 @@
         setPositions(newPos);
         saveData(newPos, closedTrades, transactions, priceCache, snapshots, settings);
         setNewPosition({ ticker: '', name: '', quantity: '', entryPrice: '', currentPrice: '', entryDate: new Date().toISOString().split('T')[0] });
+
+        // Auto-fetch price for new position
+        try {
+          const cleanTicker = ticker.replace(/b\.HK$/, '.HK');
+          const resp = await fetch(`${settings.corsProxy}https://query1.finance.yahoo.com/v8/finance/chart/${cleanTicker}?interval=1d&range=5d`);
+          const json = await resp.json();
+          const result = json?.chart?.result?.[0];
+          if (result) {
+            const meta = result.meta || {};
+            const price = meta.regularMarketPrice;
+            const closes = result.indicators?.quote?.[0]?.close || [];
+            const validCloses = closes.filter(c => c != null);
+            const previousClose = validCloses.length >= 2 ? validCloses[validCloses.length - 2] : meta.previousClose || meta.chartPreviousClose || price;
+            if (price) {
+              const newCache = { ...priceCache, [cleanTicker]: {
+                success: true,
+                price,
+                previousClose: previousClose || price,
+                change: price - (previousClose || price),
+                changePercent: previousClose ? ((price - previousClose) / previousClose) * 100 : 0,
+                currency: meta.currency || 'HKD',
+                lastUpdated: new Date().toISOString()
+              }};
+              setPriceCache(newCache);
+              saveData(newPos, closedTrades, transactions, newCache, snapshots, settings);
+              console.log(`Auto-fetched price for ${ticker}: ${price}`);
+            }
+          }
+        } catch (e) {
+          console.warn(`Failed to auto-fetch price for ${ticker}:`, e);
+        }
       };
 
       const updatePrice = (id, price) => {
@@ -1629,7 +1660,8 @@
                   dailyChangePercent,
                   dailyChangeDollar,
                   marketValue,
-                  weight
+                  weight,
+                  isNewToday
                 };
               }).sort((a, b) => b.dailyChangePercent - a.dailyChangePercent);
 
@@ -1711,9 +1743,16 @@
                     <tbody>
                       {allMovers.map(p => (
                         <tr key={p.id} className="border-t border-gray-700">
-                          <td className={`px-2 py-1.5 font-mono ${p.isClosed ? 'text-gray-400' : 'text-blue-400'}`}>{p.ticker.replace('.HK', '')}{p.isClosed ? ' (sold)' : ''}</td>
+                          <td className={`px-2 py-1.5 font-mono ${p.isClosed ? 'text-gray-400' : 'text-blue-400'}`}>
+                            {p.ticker.replace('.HK', '')}
+                            {p.isClosed ? ' (sold)' : ''}
+                            {p.isNewToday && <span className="ml-1 text-yellow-400 text-[9px]">NEW</span>}
+                          </td>
                           <td className="px-2 py-1.5 truncate max-w-24 hidden md:table-cell">{p.name}</td>
-                          <td className="px-2 py-1.5 text-right text-gray-400">{p.previousClose.toFixed(2)}</td>
+                          <td className="px-2 py-1.5 text-right text-gray-400" title={p.isNewToday ? 'Entry price (new today)' : 'Previous close'}>
+                            {p.previousClose.toFixed(2)}
+                            {p.isNewToday && <span className="text-yellow-400 text-[9px] ml-0.5">↵</span>}
+                          </td>
                           <td className="px-2 py-1.5 text-right">{p.currentPrice.toFixed(2)}</td>
                           <td className={`px-2 py-1.5 text-right font-bold ${p.dailyChangePercent > 0 ? 'text-green-400' : p.dailyChangePercent < 0 ? 'text-red-400' : 'text-gray-400'}`}>
                             {p.dailyChangePercent > 0 ? '+' : ''}{p.dailyChangePercent.toFixed(2)}%
