--- a/index.html
+++ b/index.html
@@ -1255,13 +1255,26 @@
                       })}
                     </tbody>
                     <tfoot className="bg-gray-700 font-bold">
-                      <tr>
-                        <td className="px-2 py-1.5" colSpan="6">TOTAL ({positions.length})</td>
-                        <td className="px-2 py-1.5 text-center bg-purple-800">{m.avgOpenDuration.toFixed(0)}j</td>
-                        <td className={`px-2 py-1.5 text-right ${m.totalPnL >= 0 ? 'text-green-400' : 'text-red-400'}`}>{m.totalPnL >= 0 ? '+' : ''}{fmt(m.totalPnL)}</td>
-                        <td className={`px-2 py-1.5 text-right ${m.totalPnLPercent >= 0 ? 'text-green-400' : 'text-red-400'}`}>{m.totalPnLPercent.toFixed(2)}%</td>
-                        <td></td>
-                      </tr>
+                      {(() => {
+                        // Compute totals directly from positions and priceCache for real-time accuracy
+                        const totalCost = positions.reduce((s, p) => s + p.quantity * p.entryPrice, 0);
+                        const totalValue = positions.reduce((s, p) => {
+                          const ct = p.ticker.replace(/b\.HK$/, '.HK');
+                          const price = priceCache[ct]?.price || p.currentPrice;
+                          return s + p.quantity * price;
+                        }, 0);
+                        const totalPnL = totalValue - totalCost;
+                        const totalPnLPct = totalCost > 0 ? (totalPnL / totalCost) * 100 : 0;
+                        return (
+                          <tr>
+                            <td className="px-2 py-1.5" colSpan="6">TOTAL ({positions.length})</td>
+                            <td className="px-2 py-1.5 text-center bg-purple-800">{m.avgOpenDuration.toFixed(0)}j</td>
+                            <td className={`px-2 py-1.5 text-right ${totalPnL >= 0 ? 'text-green-400' : 'text-red-400'}`}>{totalPnL >= 0 ? '+' : ''}{fmt(totalPnL)}</td>
+                            <td className={`px-2 py-1.5 text-right ${totalPnLPct >= 0 ? 'text-green-400' : 'text-red-400'}`}>{totalPnLPct.toFixed(2)}%</td>
+                            <td></td>
+                          </tr>
+                        );
+                      })()}
                     </tfoot>
                   </table>
                 </div>
