--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     const ArrowDownCircle = ({ size = 16 }) => <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><circle cx="12" cy="12" r="10"/><polyline points="8,12 12,16 16,12"/><line x1="12" y1="8" x2="12" y2="16"/></svg>;
     const Settings = ({ size = 16 }) => <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><circle cx="12" cy="12" r="3"/><path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"/></svg>;
     const AlertCircle = ({ size = 16 }) => <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="12"/><line x1="12" y1="16" x2="12.01" y2="16"/></svg>;
+    const Cloud = ({ size = 16 }) => <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z"/></svg>;
 
     // ===== INITIAL DATA (v7 format with XXXX.HK tickers) =====
     // Updated from Excel 2026-01-26
@@ -110,6 +111,15 @@
     const DEFAULT_SETTINGS = {
       corsProxy: 'https://api.allorigins.win/raw?url=',
       autoRefresh: true,
+      githubToken: '',
+    };
+
+    // GitHub repo config for data persistence
+    const GITHUB_REPO = {
+      owner: 'Marcvrick',
+      repo: 'hk-portfolio-cron',
+      path: 'data.json',
+      branch: 'main'
     };
 
     // ===== UTILITY FUNCTIONS =====
@@ -484,6 +494,68 @@
           }));
         } catch (e) { console.error('Save error:', e); }
       }, [positions, closedTrades, transactions, priceCache, snapshots, settings]);
+
+      // ===== GITHUB SYNC =====
+      const [isSyncing, setIsSyncing] = useState(false);
+      const [lastSyncStatus, setLastSyncStatus] = useState(null);
+
+      const saveToGitHub = useCallback(async (dataToSave, token) => {
+        if (!token) {
+          console.log('No GitHub token, skipping sync');
+          return { success: false, error: 'No token' };
+        }
+
+        setIsSyncing(true);
+        try {
+          // First, get the current file SHA (required for updates)
+          const getUrl = `https://api.github.com/repos/${GITHUB_REPO.owner}/${GITHUB_REPO.repo}/contents/${GITHUB_REPO.path}?ref=${GITHUB_REPO.branch}`;
+          const getRes = await fetch(getUrl, {
+            headers: { 'Authorization': `Bearer ${token}`, 'Accept': 'application/vnd.github.v3+json' }
+          });
+
+          if (!getRes.ok && getRes.status !== 404) {
+            throw new Error(`Failed to get file: ${getRes.status}`);
+          }
+
+          const currentFile = getRes.ok ? await getRes.json() : null;
+          const sha = currentFile?.sha;
+
+          // Prepare the content (base64 encoded)
+          const content = btoa(unescape(encodeURIComponent(JSON.stringify(dataToSave, null, 2))));
+
+          // Update the file
+          const putUrl = `https://api.github.com/repos/${GITHUB_REPO.owner}/${GITHUB_REPO.repo}/contents/${GITHUB_REPO.path}`;
+          const putRes = await fetch(putUrl, {
+            method: 'PUT',
+            headers: {
+              'Authorization': `Bearer ${token}`,
+              'Accept': 'application/vnd.github.v3+json',
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+              message: `Update portfolio data - ${new Date().toISOString().split('T')[0]}`,
+              content,
+              sha,
+              branch: GITHUB_REPO.branch
+            })
+          });
+
+          if (!putRes.ok) {
+            const errData = await putRes.json().catch(() => ({}));
+            throw new Error(errData.message || `GitHub API error: ${putRes.status}`);
+          }
+
+          console.log('GitHub sync successful');
+          setLastSyncStatus({ success: true, time: new Date().toISOString() });
+          return { success: true };
+        } catch (e) {
+          console.error('GitHub sync error:', e);
+          setLastSyncStatus({ success: false, error: e.message, time: new Date().toISOString() });
+          return { success: false, error: e.message };
+        } finally {
+          setIsSyncing(false);
+        }
+      }, []);
 
       // ===== AUTO-REFRESH PRICES ON LOAD =====
       useEffect(() => {
@@ -2184,6 +2256,53 @@
                         <option value="https://cors.sh/?">cors.sh</option>
                       </select>
                       <p className="text-gray-500 text-xs mt-1">Proxy utilisé pour contourner les restrictions CORS de Yahoo Finance</p>
+                    </div>
+                  </div>
+                </div>
+
+                {/* GitHub Sync */}
+                <div className="bg-gray-800 rounded-lg p-4">
+                  <h3 className="font-semibold mb-3 flex items-center gap-2"><Cloud size={16}/> GitHub Sync</h3>
+                  <div className="space-y-3">
+                    <div>
+                      <label className="text-gray-400 text-xs block mb-1">Personal Access Token</label>
+                      <input
+                        type="password"
+                        value={settings.githubToken || ''}
+                        onChange={(e) => updateSettings({ ...settings, githubToken: e.target.value })}
+                        placeholder="ghp_xxxxxxxxxxxx"
+                        className="bg-gray-700 rounded px-3 py-2 w-full text-sm font-mono"
+                      />
+                      <p className="text-gray-500 text-xs mt-1">
+                        Token avec permission "repo" pour sauvegarder data.json sur GitHub.
+                        <a href="https://github.com/settings/tokens/new?scopes=repo&description=hk-portfolio-cron" target="_blank" className="text-blue-400 ml-1">Créer un token</a>
+                      </p>
+                    </div>
+                    <div className="flex items-center gap-3">
+                      <button
+                        onClick={async () => {
+                          const data = {
+                            version: 7,
+                            positions,
+                            closedTrades,
+                            transactions,
+                            priceCache,
+                            snapshots,
+                            settings: { ...settings, githubToken: '' } // Don't save token in data.json
+                          };
+                          await saveToGitHub(data, settings.githubToken);
+                        }}
+                        disabled={!settings.githubToken || isSyncing}
+                        className={`px-4 py-2 rounded text-sm flex items-center gap-2 ${settings.githubToken ? 'bg-purple-600 hover:bg-purple-700' : 'bg-gray-600 cursor-not-allowed'}`}
+                      >
+                        {isSyncing ? <RefreshCw size={16} className="animate-spin"/> : <Upload size={16}/>}
+                        {isSyncing ? 'Syncing...' : 'Push to GitHub'}
+                      </button>
+                      {lastSyncStatus && (
+                        <span className={`text-xs ${lastSyncStatus.success ? 'text-green-400' : 'text-red-400'}`}>
+                          {lastSyncStatus.success ? 'Sync OK' : `Error: ${lastSyncStatus.error}`}
+                        </span>
+                      )}
                     </div>
                   </div>
                 </div>
